# fakeMouse

./: CMakeLists.txt  README.md  main.cpp  preSDKideas.txt
include/: FakeMouse.h  InputHandler.h
src/: FakeMouse.cpp  InputHandler.cpp
